--- a/docs/backend/function-usage/postman-api-usage.mdx
+++ b/docs/backend/function-usage/postman-api-usage.mdx
@@ -1,58 +1,49 @@
 ---
-title: "postman 调用服务接口"
+title: "Postman API 调用指南"
 ---
 
-[bilibili](https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=33&page=33&autoplay=0)
+<Card title="视频教程" icon="video" href="https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=33&page=33&autoplay=0">
+  点击查看视频教程
+</Card>
 
 ## 一、安装 Apifox
 
+<Warning>
+Apifox 是 API 文档、API 调试、API Mock、API 自动化测试一体化协作平台，定位 Postman + Swagger + Mock + JMeter。通过一套系统、一份数据，解决多个系统之间的数据同步问题。只要定义好 API 文档，API 调试、API 数据 Mock、API 自动化测试就可以直接使用，无需再次定义；API 文档和 API 开发调试使用同一个工具，API 调试完成后即可保证和 API 文档定义完全一致。高效、及时、准确！
 
-:::warning
-下载地址： [https://apifox.cn]( https://apifox.cn/a1pig4cloud)  
-Apifox <font style="color:rgb(36, 36, 36);">是 API 文档、API 调试、API Mock、API 自动化测试一体化协作平台，定位 </font><font style="color:rgb(213, 97, 97);">Postman + Swagger + Mock + JMeter</font><font style="color:rgb(36, 36, 36);">。通过一套系统、一份数据，解决多个系统之间的数据同步问题。只要定义好 API 文档，API 调试、API 数据 Mock、API 自动化测试就可以直接使用，无需再次定义；API 文档和 API 开发调试使用同一个工具，API 调试完成后即可保证和 API 文档定义完全一致。高效、及时、准确！</font>
-
-:::
-
-
+下载地址：[https://apifox.cn](https://apifox.cn/a1pig4cloud)
+</Warning>
 
 ## 二、导入 Apifox 脚本
 
+### 1. 下载脚本文件
 
-#### 1. 点击下载如下附件
+- v3.7.4+: [pig_3_7_4.apifox.json](https://www.yuque.com/attachments/yuque/0/2024/json/283679/1706455531359-e795ec88-068e-48e1-b71f-f8876768ae81.json)
+- 其他版本: [pig.apifox.json](https://www.yuque.com/attachments/yuque/0/2022/json/283679/1662169309590-f8221bb9-8814-469c-b008-c0a2ee117723.json)
 
+### 2. 导入已下载脚本
 
-+ v3.7.4+:  [pig_3_7_4.apifox.json](https://www.yuque.com/attachments/yuque/0/2024/json/283679/1706455531359-e795ec88-068e-48e1-b71f-f8876768ae81.json)
-+ other ： [pig.apifox.json](https://www.yuque.com/attachments/yuque/0/2022/json/283679/1662169309590-f8221bb9-8814-469c-b008-c0a2ee117723.json)
-
-
-
-#### 2. 导入已下载脚本
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930400658-1da2a19f-f9aa-436e-a9a7-da2d42cc32f4.png)
+![导入脚本步骤](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930400658-1da2a19f-f9aa-436e-a9a7-da2d42cc32f4.png)
 
 ## 三、使用 Apifox 调试接口
 
+### 1. 获取密码模式令牌
 
-#### 1. 获取密码模式令牌
+![获取令牌步骤](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930497537-e6e3b519-b5d7-4c9c-9598-3914c1cec9c1.png)
 
+### 2. 刷新令牌
 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930497537-e6e3b519-b5d7-4d9c-9598-3914c1cec9c1.png)
+![刷新令牌步骤](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930525039-5ba47594-7369-4c54-99c1-7534c5070eeb.png)
 
+### 3. 使用令牌调用接口
 
+![调用接口步骤](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930575181-b32fbf6b-3e7b-4ca1-b69b-fb9eb93954d9.png)
 
-#### 2. 刷新令牌
+## 问题咨询
 
+<Card title="技术支持" icon="help" href="https://www.yuque.com/pig4cloud/pig">
+  点击获取技术支持
+</Card>
 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930525039-5ba47594-7369-4c54-99c1-7534c5070eeb.png)
-
-
-
-#### 3. 使用令牌调用接口
-
-
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1661930575181-b32fbf6b-3e7b-4ca1-b69b-fb9eb93954d9.png)
-
-
-
-## ❤  问题咨询
-![](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+![技术支持](https://cdn.nlark.com/yuque/0/2022/gif/283679/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
 
