--- a/docs/frontend/text-tooltip.mdx
+++ b/docs/frontend/text-tooltip.mdx
@@ -2,15 +2,16 @@
 title: "前端文字提示组件"
 ---
 
-## title: 📄 前端文字提示组件
 ## 提示组件
+
 ```html
 <el-form-item label="初始浏览量" prop="visit">
-  <template #label> 浏览量<tip content="初始值" /> </template>
+  <template #label>浏览量<tip content="初始值" /></template>
 </el-form-item>
 ```
 
-### 属性说明
+## 属性说明
+
 | 属性名称 | 描述 | 类型 | 默认值 |
 | --- | --- | --- | --- |
 | content | 内容 | String | - |
