--- a/docs/frontend/route-management.mdx
+++ b/docs/frontend/route-management.mdx
@@ -2,28 +2,19 @@
 title: "前端路由管理"
 ---
 
-
 ## 适用场景
 点击页面上的按钮可以打开新的 Tagsview 标签页，同时也可以传递参数。
 
-以下是一个适用场景的例子，当点击“新增文章”按钮时，会打开一个新的发布文章页面，方便进行操作。
-
-
+以下是一个适用场景的例子，当点击"新增文章"按钮时，会打开一个新的发布文章页面，方便进行操作。
 
 ![](https://minio.pigx.top/oss/202308/1692178174.png)
-
-
 
 ## 代码实现方式
 ### ① 菜单管理中定义隐藏菜单
 
-
-:::warning
+<Warning>
 注意为角色分配该菜单的权限。
-
-:::
-
-
+</Warning>
 
 ![](https://minio.pigx.top/oss/202308/1692178433.png)
 
@@ -58,7 +49,7 @@ BBB  /admin/user/index/:2
 CCC  /admin/user/index/:3
 ```
 
-## ② 页面获取参数
+### ② 页面获取参数
 ```vue
 const route = useRoute();
 
@@ -68,8 +59,7 @@ onMounted(() => {
 });
 ```
 
-:::success
-<font style="color:rgba(0, 0, 0, 0.87);">注意 tagviewName 会获取以菜单排序第一个的名称为准</font>
-
-:::
+<Note>
+注意 tagviewName 会获取以菜单排序第一个的名称为准
+</Note>
 
