--- a/docs/frontend/tab-management.mdx
+++ b/docs/frontend/tab-management.mdx
@@ -2,11 +2,13 @@
 title: "前端标签页管理"
 ---
 
-
 ## 中键点击
-中键鼠标 按下时，判断是鼠标中键就 关闭当前 tasgview
 
-```javascript
+<Note>
+中键鼠标按下时，判断是鼠标中键就关闭当前 tagsview。
+</Note>
+
+```typescript
 const onMousedownMenu = (v: RouteItem, e: MouseEvent) => {
   if (!v.meta?.isAffix && e.button === 1) {
     const item = Object.assign({}, { contextMenuClickId: 1, ...v });
@@ -16,30 +18,26 @@ const onMousedownMenu = (v: RouteItem, e: MouseEvent) => {
 ```
 
 ## 右键菜单
-代码路径：[/@/layout/navBars/tagsView/contextmenu.vue](src/layout/navBars/tagsView/contextmenu.vue)，右键菜单与 [当前页操作](/config/tagsView/#%E5%BD%93%E5%89%8D%E9%A1%B5%E6%93%8D%E4%BD%9C) 一样，
 
-:::color3
-onCurrentContextmenuClick 参数包含：
+<Card title="代码位置" icon="code">
+  `/@/layout/navBars/tagsView/contextmenu.vue`
+</Card>
 
+<Note>
+右键菜单与 [当前页操作](/config/tagsView/#%E5%BD%93%E5%89%8D%E9%A1%B5%E6%93%8D%E4%BD%9C) 一样。
+</Note>
 
+<Card title="onCurrentContextmenuClick 参数说明" icon="info">
+  - 0: 刷新当前
+  - 1: 关闭当前
+  - 2: 关闭其它
+  - 3: 关闭全部
+  - 4: 当前页全屏
+</Card>
 
-0 刷新当前
+具体可查看代码 `/@/layout/navBars/tagsView/tagsView.vue` 中的 `onCurrentContextmenuClick` 方法：
 
-1 关闭当前
-
-2 关闭其它
-
-3 关闭全部
-
-4 当前页全屏
-
-:::
-
-
-
-具体可查看代码 [/@/layout/navBars/tagsView/tagsView.vue](src/layout/navBars/tagsView/tagsView.vue) 中的 [onCurrentContextmenuClick](src/layout/navBars/tagsView/tagsView.vue#L335) 方法
-
-```javascript
+```typescript
 // 当前项右键菜单点击
 const onCurrentContextmenuClick = async (item: RouteItem) => {
   item.commonUrl = transUrlParams(item);
@@ -79,16 +77,31 @@ const onCurrentContextmenuClick = async (item: RouteItem) => {
 ```
 
 ## 当前页操作
-参数说明：0 刷新当前，1 关闭当前，2 关闭其它，3 关闭全部 4 当前页全屏。tagsView 只支持对当前页进行操作。
 
-方法说明：onCurrentContextmenuClick 和参数字段名 contextMenuClickId 为固定，只需要传参数 0 - 4
+<Note>
+参数说明：
+- 0: 刷新当前
+- 1: 关闭当前
+- 2: 关闭其它
+- 3: 关闭全部
+- 4: 当前页全屏
 
-代码地址：[/@/views/fun/tagsView](src/views/fun/tagsView/index.vue)
+tagsView 只支持对当前页进行操作。
+</Note>
 
-### 1. 刷新（参数 0）
-```javascript
+<Note>
+方法说明：`onCurrentContextmenuClick` 和参数字段名 `contextMenuClickId` 为固定，只需要传参数 0 - 4。
+</Note>
+
+<Card title="代码位置" icon="code">
+  `/@/views/fun/tagsView`
+</Card>
+
+### 刷新当前页（参数 0）
+
+```typescript
 <script setup lang="ts">
-  import { useRoute } from "vue-router";
+import { useRoute } from "vue-router";
 import mittBus from "/@/utils/mitt";
 
 // 定义变量内容
@@ -104,10 +117,11 @@ const refreshCurrentTagsView = () => {
 </script>
 ```
 
-### 2. 关闭（参数 1）
-```javascript
+### 关闭当前页（参数 1）
+
+```typescript
 <script setup lang="ts">
-  import { useRoute } from "vue-router";
+import { useRoute } from "vue-router";
 import mittBus from "/@/utils/mitt";
 
 // 定义变量内容
@@ -123,10 +137,11 @@ const refreshCurrentTagsView = () => {
 </script>
 ```
 
-### 3. 关闭其它（参数 2）
-```javascript
+### 关闭其他页（参数 2）
+
+```typescript
 <script setup lang="ts">
-  import { useRoute } from "vue-router";
+import { useRoute } from "vue-router";
 import mittBus from "/@/utils/mitt";
 
 // 定义变量内容
@@ -142,10 +157,11 @@ const refreshCurrentTagsView = () => {
 </script>
 ```
 
-### 4. 全部关闭（参数 3）
-```javascript
+### 关闭所有页（参数 3）
+
+```typescript
 <script setup lang="ts">
-  import { useRoute } from "vue-router";
+import { useRoute } from "vue-router";
 import mittBus from "/@/utils/mitt";
 
 // 定义变量内容
@@ -161,10 +177,11 @@ const refreshCurrentTagsView = () => {
 </script>
 ```
 
-### 5. 当前页全屏（参数 4）
-```javascript
+### 当前页全屏（参数 4）
+
+```typescript
 <script setup lang="ts">
-  import { useRoute } from "vue-router";
+import { useRoute } from "vue-router";
 import mittBus from "/@/utils/mitt";
 
 // 定义变量内容
